# wct

./: $  .gitignore  .ignore  .wct.py.swp  Makefile  README.md  pyproject.toml  requirements.txt  run.py  setup.py  wct.py
smwct.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: .search.py.swp  colors.py  ignore_analyser.py  search.py
src/module/: .explorer.py.swp  .params_verification.py.swp  errors.py  explorer.py  params_verification.py  tree.py  username.py
