[tool.poetry]
name = "smwct"
version = "0.1.0"
description = "About"
authors = ["Search and Moderation Wizard for the Computer Tree.n"]
license = "GNU"

[tool.poetry.dependencies]
python = "3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
